@@ -518,6 +518,11 @@
                 <version>1.3.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.xerial</groupId>
+                <artifactId>sqlite-jdbc</artifactId>
+                <version>3.8.11.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
