@@ -8,6 +8,7 @@
   - fix SqlObject getting confused about result types due to bridge methods
   - add SqlLogger to log queries, timing, and exceptions, with matching LoggableArgument for use in custom ArgumentFactories
   - StringTemplate no longer shares template groups across threads, to work around concurrency issues
+  - added SqliteDatabaseRule for testing convenience
 
 3.1.1
   - Improve IBM JDK compatibility with default methods
@@ -157,7 +158,7 @@
   - expose Script.getStatements()
 
 2.77
-  - Improved BindIn functionality: can now process Iterables and arrays/varargs 
+  - Improved BindIn functionality: can now process Iterables and arrays/varargs
     of any type, and has configurable handling for a null/empty argument.
     Check the source code comments or your IDE hints for details.
 
